TP 3 : exo 10 , later fix pom (vulnerabilities) + missing test